better works align, bugfix on firefox, add new project and MASTER

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -110,9 +110,9 @@ a:after {
 }
 
 .blocks {
-  margin: 20px 0;
-  padding: 0 calc((100vw - (288px * 4)) / 2);
-  width: 100%;
+  margin: 20px calc((100vw - (288px * 4)) / 2);
+  width: calc(288px * 4);
+  text-align: center;
 }
 
 .block {
@@ -126,7 +126,7 @@ a:after {
 }
 
 .block img {
-  max-width: 100%;
+  width: 100%;
   transition: transform .5s;
   z-index: 1;
 }
@@ -138,6 +138,7 @@ a:after {
   width: 100%;
   height: 100%;
   transition: background-color .5s;
+  z-index: 2;
 }
 
 .block .description {
@@ -150,6 +151,7 @@ a:after {
   transition: opacity .5s;
   padding: 10px;
   text-align: justify;
+  z-index: 3;
 }
 
 .blue-link {
@@ -168,6 +170,7 @@ a:after {
   opacity: 0;
   transition: opacity .5s;
   font-size: 1.4em;
+  z-index: 3;
 }
 
 .block .fa-link:hover {
@@ -187,7 +190,10 @@ a:after {
 }
 
 @media screen and (max-width: 1200px) {
-  .blocks { padding: 0 calc((100vw - (288px * 2)) / 2); }
+  .blocks {
+    margin: 20px calc((100vw - (288px * 2)) / 2);
+    width: calc(288px * 2);
+  }
 }
 
 @media screen and (max-width: 1000px) {
@@ -210,10 +216,6 @@ a:after {
 }
 
 @media screen and (max-width: 600px) {
-  .blocks {
-    margin: 20px 0;
-    padding: 0 10vw;
-  }
   .block {
     width: 80vw;
     height: 80vw;
